
syntax ="proto3";


message ProofElementStore{
enum ProofType{
  SECP =0;
  SECPSHA =1;
}
ProofType type = 1;
SECPProofElementStore secp = 2;
SECPSHA2ProofElementStore secpsha =3;
}

message SECPProofElementStore {
  enum ProofElementState {
    Initialized =0;
    Signed =1;
    Revoked =2;
    Superseded =3;
  }
  string name = 1;
  ProofElementState state =2;
  int32 threshold = 3;
  string data =4;
  repeated bytes PublicKeys =5;
  repeated bytes Signatures =6;
  string SupersededBy =7;
}

message SECPSHA2ProofElementStore {
  enum ProofElementState {
    Initialized =0;
    Signed =1;
    Revoked =2;
    Superseded =3;
  }
  string name = 1;
  ProofElementState state =2;
  int32 threshold = 3;
  string data =4;
  repeated bytes PublicKeys =5;
  repeated bytes Signatures =6;
  repeated bytes Digests =7;
  repeated bytes Preimages =8;
  string supersededBy =9;
}
